--- a/.gitmodules
+++ b/.gitmodules
@@ -1,7 +1,7 @@
 [submodule "third-party/json"]
 	path = third-party/json
 	url = https://github.com/nlohmann/json.git
-[submodule "third-party/duckdb-source"]
-	path = third-party/duckdb-source
-	url = https://github.com/zhengk30/duckdb.git
-	branch = v1.2.1
+
+[submodule "third-party/duckdb-v1.2"]
+	path = third-party/duckdb-v1.2
+	url = https://github.com/zhengk30/duckdb-v1.2.git
